# Payment/src/api/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "reiner.gg",
     "basePath": "/api/v1",
     "paths": {
-        "/accounts/{user_id}": {
+        "/accounts": {
             "post": {
                 "tags": [
                     "accounts"
@@ -35,6 +35,43 @@
                     },
                     "400": {
                         "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/accounts/{user_id}": {
+            "get": {
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Get Account Details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Account details",
+                        "schema": {
+                            "$ref": "#/definitions/models.Account"
+                        }
+                    },
+                    "404": {
+                        "description": "Account not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -189,11 +226,28 @@
         }
     },
     "definitions": {
-        "models.AccountRequest": {
+        "models.Account": {
             "type": "object",
             "required": [
                 "userId"
             ],
+            "properties": {
+                "balance": {
+                    "type": "number"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.AccountRequest": {
+            "type": "object",
             "properties": {
                 "userId": {
                     "type": "string"
@@ -203,10 +257,10 @@
         "models.CreateAccountResponse": {
             "type": "object",
             "properties": {
-                "id": {
+                "message": {
                     "type": "string"
                 },
-                "message": {
+                "user_id": {
                     "type": "string"
                 }
             }
