# Payment/src/api/internal/handlers/account_handlers.go
@@ -10,6 +10,37 @@ import (
 	"github.com/zVSciy/EventManager/Payment/internal/util"
 )
 
+// GetAccount godoc
+// @Summary Get Account Details
+// @Tags accounts
+// @Param user_id path string true "User ID"
+// @Success 200 {object} models.Account "Account details"
+// @Failure 404 {object} models.ErrorResponse "Account not found"
+// @Failure 500 {object} models.ErrorResponse "Internal Server Error"
+// @Router /accounts/{user_id} [get]
+func GetAccount(w http.ResponseWriter, r *http.Request) {
+	userID := r.PathValue("user_id")
+
+	account, err := services.GetAccount(userID)
+	if err == nil {
+		account.CreatedAt = util.ApplyLocalTZ(account.CreatedAt)
+		util.JSONResponse(w, http.StatusOK, account)
+		return
+	}
+
+	errorResponses := map[string]int{
+		"account_not_found":        http.StatusNotFound,
+		"database_not_initialized": http.StatusInternalServerError,
+	}
+
+	errStr := err.Error()
+	if statusCode, exists := errorResponses[errStr]; exists {
+		util.JSONResponse(w, statusCode, models.ErrorResponse{
+			Error: strings.ToUpper(errStr),
+		})
+	}
+}
+
 // CreateAccount godoc
 // @Summary Create Account
 // @Tags accounts
@@ -37,7 +68,8 @@ func CreateAccount(w http.ResponseWriter, r *http.Request) {
 	}
 
 	errorResponses := map[string]int{
-		"account_exists": http.StatusConflict,
+		"account_exists":           http.StatusConflict,
+		"database_not_initialized": http.StatusInternalServerError,
 	}
 
 	errStr := err.Error()
